# Rag_projet

./: main.py  pyproject.toml  requirements.txt
data/texte/: intro_rag.txt  intro_rag_2.txt  intro_rag_3.txt  texte_exemple_rag.txt
notebooks/: ingestionParsingTexte.ipynb  ingestionPdf.ipynb
