[project]
name = "rag-projet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docx>=0.2.4",
    "docx2txt>=0.9",
    "faiss-cpu>=1.14.2",
    "ipykernel>=7.3.0",
    "jq>=1.11.0",
    "langchain>=1.3.9",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.0",
    "langchain-pinecone>=0.2.13",
    "langchain-text-splitters>=1.1.2",
    "libmagic>=1.0",
    "matplotlib>=3.11.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.13.2",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.5.1",
    "umap-learn>=0.5.12",
    "unstructured[docx]>=0.23.1",
]
